# RapidMCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md
benchmark/: grpc_server.py  pyproject.toml  run_benchmark.py
docs/superpowers/plans/: 2026-04-16-langchain-adapter-parity.md  2026-04-16-mcp-test-rapidmcpclient-migration.md  2026-04-19-livekit-integration-parity.md
examples/: .env.example  .gitignore  README.md  docker-compose.yml
examples/fastapi/backend/: Dockerfile  app.py  pyproject.toml
examples/fastapi/mcp-server/: Dockerfile  pyproject.toml  server.py
examples/nestjs/backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
examples/nestjs/backend/src/: app.controller.ts  app.module.ts  main.ts  mcp.service.ts
examples/nestjs/mcp-server/: Dockerfile  package-lock.json  package.json  server.ts  tsconfig.json
proto/: mcp.proto
python/: Dockerfile  LICENSE  README.md  generate.py  generate_proto.py  pyproject.toml
python/src/fastermcp/: __init__.py  _servicer.py  _utils.py  cli.py  client.py  context.py  errors.py  middleware.py  server.py  testing.py
python/src/fastermcp/_generated/: mcp_pb2.py  mcp_pb2_grpc.py
python/src/fastermcp/integrations/: __init__.py  langchain.py  livekit.py
python/src/fastermcp/prompts/: __init__.py  manager.py  prompt.py
python/src/fastermcp/resources/: __init__.py  manager.py  resource.py  uri_template.py
python/src/fastermcp/tools/: __init__.py  tool.py  tool_manager.py
python/src/mcp_grpc/: __init__.py  _servicer.py  _utils.py  cli.py  client.py  content.py  context.py  elicitation.py  middleware.py  server.py  session.py  testing.py  types.py
python/src/mcp_grpc/integrations/: __init__.py  livekit.py
python/src/mcp_grpc/tools/: __init__.py  tool.py  tool_manager.py
python/src/rapidmcp/: __init__.py  _servicer.py  _utils.py  auth.py  cli.py  client.py  content.py  context.py  elicitation.py  errors.py  middleware.py  server.py  session.py  testing.py
python/src/rapidmcp/_generated/: __init__.py  mcp_pb2.pyi  mcp_pb2_grpc.py
python/src/rapidmcp/integrations/: __init__.py  langchain.py  livekit.py
python/src/rapidmcp/prompts/: __init__.py  manager.py
python/src/rapidmcp/resources/: __init__.py  manager.py
python/src/rapidmcp/tools/: __init__.py  tool.py  tool_manager.py
python/tests/: DOCKER_TESTS.md  _future_annotations_helper.py  test_auth.py  test_cli.py  test_client.py  test_content.py  test_elicitation.py  test_integration.py  test_integrations_auth.py  test_integrations_langchain.py  test_integrations_livekit.py  test_middleware.py  test_mounting.py  test_sampling.py  test_server.py  test_session.py  test_stress.py  test_stress_subprocess.py  test_tls_docker.py  test_uri_template.py
python/tests/servers/: echo.py  mixed.py  sampling.py
typescript/: buf.gen.yaml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
typescript/src/: _utils.ts  client.ts  errors.ts  index.ts  server.ts  servicer.ts  types.ts
typescript/src/integrations/: langchain.ts
typescript/src/prompts/: prompt-manager.ts  prompt.ts
typescript/src/resources/: resource-manager.ts  resource.ts  uri-template.ts
typescript/src/tools/: tool-manager.ts
typescript/tests/: client.test.ts  errors.test.ts  integrations.langchain.test.ts  prompt-manager.test.ts  resource-manager.test.ts  server-integration.test.ts  test-server.ts  types.test.ts  uri-template.test.ts  utils.test.ts
