[project]
name = "mcp-grpc"
version = "0.1.0"
description = "gRPC-native tool-calling protocol inspired by MCP"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.57.0",
    "protobuf>=4.24.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.57.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "ty>=0.0.1",
]

[project.scripts]
fastermcp = "mcp_grpc.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/mcp_grpc/_generated"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_grpc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
# Non-blocking: all rules set to "warn" while ty is alpha
# Flip individual rules to "error" as the codebase and ty stabilize
unknown-argument = "warn"
invalid-return-type = "warn"
missing-argument = "warn"
invalid-argument-type = "warn"
unresolved-attribute = "warn"
