[project]
name = "rapidmcp"
version = "0.4.0"
description = "gRPC-native MCP (Model Context Protocol) library — ~17x lower latency than HTTP transports"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Emiliano Christiansen"},
]
keywords = ["mcp", "grpc", "llm", "tools", "model-context-protocol", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grpcio>=1.57.0",
    "protobuf>=4.24.0",
]

[project.urls]
Homepage = "https://github.com/emitategh/RapidMCP"
Repository = "https://github.com/emitategh/RapidMCP"
Issues = "https://github.com/emitategh/RapidMCP/issues"

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2",
]
livekit = [
    "livekit-agents[mcp]>=0.8",
]
dev = [
    "cryptography>=41.0",
    "grpcio-tools>=1.57.0",
    "langchain-core>=1.2.28",
    "livekit-agents[mcp]>=0.8",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "ty>=0.0.1",
]

[project.scripts]
rapidmcp = "rapidmcp.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rapidmcp" = ["py.typed"]
"rapidmcp._generated" = ["*.pyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/rapidmcp/_generated"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["rapidmcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
# Non-blocking: all rules set to "warn" while ty is alpha
# Flip individual rules to "error" as the codebase and ty stabilize
unknown-argument = "warn"
invalid-return-type = "warn"
missing-argument = "warn"
invalid-argument-type = "warn"
unresolved-attribute = "warn"
